  * [Uninstall-PerformanceCounterCategory](http://get-carbon.org/help/Uninstall-PerformanceCounterCategory.html)
  * [Complete-Jobs](http://get-carbon.org/help/Complete-Jobs.html)
  * [Get-PowershellPath](http://get-carbon.org/help/Get-PowershellPath.html)
  * [Invoke-PowerShell](http://get-carbon.org/help/Invoke-PowerShell.html)
* Improved whitespace in HTML documentation code samples.


# 0.2.4 (28 June 2012)

## Enhancements
 * Improved documentation for:
  * Get-PathCanonicalCase
  * Get-PathRelativeTo
  * New-Junction
  * New-TempDir
  * Remove-Junction
  * Test-PathIsJunction
  * Reset-HostsFile
  * Set-HostsEntry
  * Add-IisDefaultDocument
  * Get-IisHttpRedirect
  * Get-IisVersion
  * Get-IisWebsite
  * Install-IisApplication
  * Install-IisAppPool
  * Install-IisVirtualDirectory
  * Install-IisWebsite
  * Invoke-AppCmd
  * Remove-IisWebsite
  * Set-IisAnonymousAuthentication
  * Set-IisBasicAuthentication
  * Set-IisDirectoryBrowsing
  * Set-IisHttpRedirect
  * Set-IisSslFlags
  * Set-IisWebsiteSslCertifiate
  * Set-IisWindowsAuthentication

# 0.2.3 (27 June 2012)

## Enhancements
 * Improved documentation for:
  * Disable-IEEnhancedSecurityConfiguration
  * Enable-IEActivationPermissions
  * Get-FullPath
  * Invoke-WindowsInstaller
  * Protect-String
  * Remove-EnvironmentVariable
  * Set-DotNetAppSetting
  * Set-DotNetConnectionString
  * Set-EnvironmentVariable
  * Test-OSIs32Bit
  * Test-OSIs64Bit
  * Unprotect-String

## Bug fixes
 * Invoke-WindowsInstaller doesn't validate that installer path ends in '.msi'.
 * Invoke-WindowsInstaller not showing correct exit code when installation fails.

# 0.2.2 (19 June 2012)

## Enhancements
 * Created Import-Carbon script to help users properly import Carbon.
 
## Bug fixes
 * Add-GroupMembers fails to add Administrators and ANONYMOUS LOGON built-in accounts.
 * Add-GroupMembers fails when adding built-in accounts multiple times.
 * Add-GroupMembers fails to add domain user to a local group.
 