@@ -187,12 +187,16 @@
 
 
     <h1>Test-PowerShellIs32Bit</h1>
-    <div>Tests if the current powershell process is 32-bit.</div>
+    <div>Tests if the current PowerShell process is 32-bit.</div>
 
         <h2>Syntax</h2>
     <pre class="Syntax"><code>Test-PowerShellIs32Bit [&lt;CommonParameters&gt;]</code></pre>
     
-    
+        <h2>Description</h2>
+    <div class="Description">
+        <p>Returns <code>True</code> if the currently executing PowerShell process is 32-bit/x86, <code>False</code> if it is 64-bit/x64.</p>
+
+    </div>
     
     
 
@@ -200,10 +204,15 @@
         
     
         
-    
+            <h2>Return Values</h2>
+        <p><a href="http://msdn.microsoft.com/en-us/library/system.boolean.aspx">System.Boolean</a>. </p>
+
         
     
         
-    
+                <h2>EXAMPLE 1</h2>
+            <pre><code>Test-PowerShellIs32Bit</code></pre>
+            <p><p>Returns <code>True</code> if PowerShell is 32-bit/x86, <code>False</code> if it is 64-bit/x64.</p>
+</p><p></p><p></p><p></p><p></p>
 </body>
 </html>   
