@@ -26,6 +26,7 @@
   * [Complete-Jobs](http://get-carbon.org/help/Complete-Jobs.html)
   * [Get-PowershellPath](http://get-carbon.org/help/Get-PowershellPath.html)
   * [Invoke-PowerShell](http://get-carbon.org/help/Invoke-PowerShell.html)
+  * [Test-PowerShellIs32Bit](http://get-carbon.org/help/Test-PowerShellIs32Bit.html)
 * Improved whitespace in HTML documentation code samples.
 
 
